--- a/package.json
+++ b/package.json
@@ -46,5 +46,8 @@
     "prettier-plugin-tailwindcss": "^0.5.14",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
+  },
+  "hooks": {
+    "pre-commit": "lint-staged"
   }
 }
