--- a/package.json
+++ b/package.json
@@ -47,7 +47,9 @@
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   },
-  "hooks": {
-    "pre-commit": "lint-staged"
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
   }
 }
