--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "start": "next start",
     "lint": "next lint",
     "format": "next lint --fix && prettier '**/*.{json,yaml}' --write --ignore-path .gitignore",
-    "check-types": "tsc --noEmit --pretty"
+    "check-types": "tsc --noEmit --pretty",
+    "prepare": "husky"
   },
   "type": "module",
   "dependencies": {
@@ -46,25 +47,5 @@
     "prettier-plugin-tailwindcss": "^0.5.14",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
-  },
-  "lint-staged": {
-    "**/*.{js,jsx,ts,tsx}": [
-      "eslint --fix",
-      "eslint"
-    ],
-    "**/*.ts": [
-      "npm run check-types"
-    ],
-    "**/*.tsx": [
-      "npm run check-types"
-    ],
-    "*.{json,yaml}": [
-      "prettier --write"
-    ]
   }
 }
