--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.4.19",
+    "commitlint": "^19.3.0",
     "cssnano": "^7.0.1",
     "eslint": "^8",
     "eslint-config-airbnb": "^19.0.4",
