--- a/.lintstagedrc
+++ b/.lintstagedrc
@@ -1,4 +1,4 @@
-{
+export default {
   '*.{js,jsx,ts,tsx}': ['eslint --fix', 'eslint',],
   '**/*.ts': ['npm run check-types',],
   '**/*.tsx': ['npm run check-types',],
