--- a/package.json
+++ b/package.json
@@ -21,11 +21,12 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@commitlint/cli": "^19.3.0",
+    "@commitlint/config-conventional": "^19.2.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.4.19",
-    "commitlint": "^19.3.0",
     "cssnano": "^7.0.1",
     "eslint": "^8",
     "eslint-config-airbnb": "^19.0.4",
