--- a/.lintstagedrc.json
+++ b/.lintstagedrc.json
@@ -1,4 +1,4 @@
 {
-  "*.{js,jsx,ts,tsx}": ["eslint --fix", "eslint"],
+  "./src/**/*.{js,jsx,ts,tsx}": ["eslint --fix", "eslint"],
   "*.{json,yaml}": ["prettier --write"]
 }
