--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     }
   },
   "lint-staged": {
-    "./src/**/*.{js,jsx}": [
+    "./src/**/*.{ts,tsx}": [
       "npx prettier --write",
       "npx eslint",
       "git add"
