--- a/package.json
+++ b/package.json
@@ -54,10 +54,10 @@
     }
   },
   "lint-staged": {
-    "./src/**/*.{ts,tsx}": [
-      "npx prettier --write",
-      "npx eslint",
-      "git add"
-    ]
+    "*.{js,jsx,ts,tsx}": [
+      "eslint --fix",
+      "eslint"
+    ],
+    "**/*.{js,jsx,ts,tsx}": "npm run check-types"
   }
 }
