--- a/package.json
+++ b/package.json
@@ -47,5 +47,12 @@
     "prettier-plugin-tailwindcss": "^0.5.14",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx}": [
+      "eslint --fix",
+      "eslint"
+    ],
+    "**/*.{js,jsx,ts,tsx}": "npm run check-types"
   }
 }
