--- a/.lintstagedrc.json
+++ b/.lintstagedrc.json
@@ -1,4 +1,6 @@
 {
   "*.{js,jsx,ts,tsx}": ["eslint --fix", "eslint"],
+  "**/*.tsx": ["npm run check-types"],
+  "**/*.ts": ["npm run check-types"],
   "*.{json,yaml}": ["prettier --write"]
 }
