--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
     "start": "next start",
     "lint": "next lint",
     "format": "next lint --fix && prettier '**/*.{json,yaml}' --write --ignore-path .gitignore",
-    "check-types": "tsc --noEmit --pretty"
+    "check-types": "tsc --noEmit --pretty",
+    "prepare": "husky"
   },
   "type": "module",
   "dependencies": {
-    "husky": "^9.0.11",
     "next": "14.2.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -39,6 +39,7 @@
     "eslint-plugin-simple-import-sort": "^12.1.0",
     "eslint-plugin-tailwindcss": "^3.17.0",
     "eslint-plugin-unused-imports": "^3.2.0",
+    "husky": "^9.0.11",
     "lint-staged": "^15.2.4",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.38",
