--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "type": "module",
   "dependencies": {
+    "@floating-ui/react": "^0.26.16",
     "next": "14.2.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
