--- a/tsconfig.json
+++ b/tsconfig.json
@@ -34,7 +34,8 @@
       "@/components/*": ["./src/app/(public)/_components/*"],
       "@/public-pages/*": ["./src/app/(public)/*"],
       "@/auth-pages/*": ["./src/app/(protected)/*"],
-      "@/protected-pages/*": ["./src/app/(auth)/*"]
+      "@/protected-pages/*": ["./src/app/(auth)/*"],
+      "@/domain/*": ["./src/domain/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
