--- a/tsconfig.json
+++ b/tsconfig.json
@@ -40,6 +40,12 @@
       "@/resources/*": ["./src/resources/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts",
+    "_next/types/**/*.ts"
+  ],
   "exclude": ["./node_modules/**/*"]
 }
