--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
   "type": "module",
   "dependencies": {
     "@floating-ui/react": "^0.26.16",
+    "@tanstack/react-query": "^5.38.0",
+    "@tanstack/react-query-devtools": "^5.38.0",
     "next": "14.2.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-query": "^3.39.3",
     "zod": "^3.23.8"
   },
   "devDependencies": {
