--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -44,9 +44,10 @@
         "import/extensions": "off",
         "react/function-component-definition": "off",
         "react/require-default-props": "off",
+        "no-plusplus": "off",
+        "jsx-a11y/label-has-associated-control": "off",
         "react/jsx-props-no-spreading": "off",
         "@typescript-eslint/comma-dangle": "off",
-        "@typescript-eslint/consistent-type-imports": "error",
         "no-restricted-syntax": [
           "error",
           "ForInStatement",
