--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,9 +30,23 @@
     ],
     "paths": {
       "@/public/*": ["./public/*"],
-      "@/src/*": ["./src/*"]
+      "@/src/*": ["./src/*"],
+      "@/components/*": ["./src/app/(public)/_components/*"],
+      "@/public-pages/*": ["./src/app/(public)/*"],
+      "@/auth-pages/*": ["./src/app/(protected)/*"],
+      "@/protected-pages/*": ["./src/app/(auth)/*"],
+      "@/domain/*": ["./src/domain/*"],
+      "@/context/*": ["./src/app/_context/*"],
+      "@/resources/*": ["./src/resources/*"],
+      "@/util/*": ["./src/util/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts",
+    "_next/types/**/*.ts"
+  ],
   "exclude": ["./node_modules/**/*"]
 }
