--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@tanstack/react-query": "^5.38.0",
     "@tanstack/react-query-devtools": "^5.38.0",
     "next": "14.2.3",
+    "next-auth": "^4.24.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "use-debounce": "^10.0.0",
