--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@floating-ui/react": "^0.26.16",
     "@tanstack/react-query": "^5.38.0",
     "@tanstack/react-query-devtools": "^5.38.0",
+    "dayjs": "^1.11.11",
     "next": "14.2.3",
     "next-auth": "^4.24.7",
     "react": "^18.3.1",
